--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="assets/style.css" />
     <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin />
     <script>
-      let $ = require("jquery");
-      let jQuery = $;
-      let fs = require("fs");
-      let bot = require("../bot/bot.js");
+      const $ = require("jquery");
+      const jQuery = $;
+      const fs = require("fs");
+      var bot = require("../bot/bot.js");
     </script>
     <title>Yoo-Bot</title>
   </head>
@@ -23,27 +23,39 @@
           <button class="topbar-btn" id="close-btn" aria-label="Close" data-microtip-position="bottom-left" role="tooltip">✕</button>
         </div>
       </div>
+      <div id="curtain"></div>
       <div class="root">
-        <h1>Yoo-Bot</h1>
-        <p>An app to run your Discord bot.</p>
-        <table>
-          <tbody>
-            <tr>
-              <td><button class="big-btn" id="start" aria-label="Start The Bot" data-microtip-position="top" role="tooltip">Start</button></td>
-              <td><button class="big-btn" id="stop" aria-label="Stop The Bot" data-microtip-position="top" role="tooltip">Stop</button></td>
-            </tr>
-          </tbody>
-        </table>
-        <table>
-          <tbody>
-            <tr>
-              <td><input type="text" id="name" placeholder="Bot Name" /></td>
-              <td><input type="text" id="prefix" placeholder="Bot Prefix" /></td>
-              <td><input type="password" id="token" placeholder="Bot Token" /></td>
-            </tr>
-          </tbody>
-        </table>
-        <input type="url" id="invite" placeholder="Bot Invite Link" style="width: 95%;" />
+        <div id="home">
+          <h1>Yoo-Bot</h1>
+          <p>An app to run your Discord bot.</p>
+          <div id="bots">
+            Loading...
+          </div>
+        </div>
+        <div id="panel">
+          <h1 class="bot-name"></h1>
+          <table>
+            <tbody>
+              <tr>
+                <td><button class="big-btn" id="start" aria-label="Start The Bot" data-microtip-position="top" role="tooltip">Start</button></td>
+                <td><button class="big-btn" id="stop" aria-label="Stop The Bot" data-microtip-position="top" role="tooltip">Stop</button></td>
+              </tr>
+            </tbody>
+          </table>
+          <table>
+            <tbody>
+              <tr>
+                <td><input type="text" id="name" placeholder="Bot Name" /></td>
+                <td><input type="text" id="prefixes" placeholder="Bot Prefixes [ , ]" /></td>
+                <td><input type="password" id="token" placeholder="Bot Token" /></td>
+              </tr>
+            </tbody>
+          </table>
+          <input type="text" id="owners" placeholder="Bot Owners [ , ]" style="width: 95%;" />
+          <br>
+          <input type="url" id="invite" placeholder="Bot Invite Link" style="width: 95%;" />
+          <input type="hidden" id="id" value="835540883767951390">
+        </div>
       </div>
       <div id="notification">
         <br>
@@ -57,6 +69,6 @@
     <link rel="stylesheet" href="../../node_modules/microtip/microtip.min.css" />
     <script src="scripts/functions.js"></script>
     <script src="scripts/menu.js"></script>
-    <script src="scripts/home.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
